Use JIB tool to build image with maven
Signed-off-by: YanzheL <lee.yanzhe@yanzhe.org>