@@ -24,6 +24,36 @@
         </dependencies>
         <groupId>org.jetbrains.kotlin</groupId>
       </plugin>
+      <plugin>
+        <groupId>com.google.cloud.tools</groupId>
+        <artifactId>jib-maven-plugin</artifactId>
+        <version>2.0.0</version>
+        <configuration>
+          <to>
+            <image>registry.hitnslab.com/dns-security/pdns-data-loader</image>
+          </to>
+          <from>
+            <image>gcr.azk8s.cn/distroless/java:11</image>
+          </from>
+          <container>
+            <labels>
+              <label>maintainer="Yanzhe Lee &lt;lee.yanzhe@yanzhe.org&gt;"</label>
+            </labels>
+            <creationTime>USE_CURRENT_TIMESTAMP</creationTime>
+            <workingDirectory>/app</workingDirectory>
+            <format>OCI</format>
+            <user>1001:1001</user>
+            <volumes>
+              <volume>/datasource</volume>
+            </volumes>
+            <jvmFlags>
+              <jvmFlag>-server</jvmFlag>
+              <jvmFlag>-Xmx4g</jvmFlag>
+              <jvmFlag>-Xlog:gc*:gc.log</jvmFlag>
+            </jvmFlags>
+          </container>
+        </configuration>
+      </plugin>
     </plugins>
     <sourceDirectory>${project.basedir}/src/main/kotlin</sourceDirectory>
     <testSourceDirectory>${project.basedir}/src/test/kotlin</testSourceDirectory>
